# RAGChecker

./: pyproject.toml
data/benchmark/metadata/: mydata_qa.json
examples/: exam_data_process.py  rag_exam_inputs.json
