[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ragchecker"
version = "0.1.9"
description = "RAGChecker: A Fine-grained Framework For Diagnosing Retrieval-Augmented Generation (RAG) systems."
authors = [
    { name = "Xiangkun Hu", email = "xiangkhu@amazon.com" },
    { name = "Lin Qiu", email = "quln@amazon.com" },
    { name = "Tianhang Zhang", email = "zzthang@amazon.com" },
    { name = "Dongyu Ru", email = "rudongyu@amazon.com" },
    { name = "Peng Shi", email = "penshi@amazon.com" },
    { name = "Shuaichen Chang", email = "cshuaich@amazon.com" },
]
requires-python = "~=3.11"
readme = "README.md"
license = "Apache-2.0"
dependencies = [
    "refchecker>=0.2,<0.3",
    "loguru>=0.7,<0.8",
    "dataclasses-json>=0.6,<0.7",
]

[project.scripts]
ragchecker-cli = "ragchecker.cli:main"
